# arc-agi-2

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  run-opencode.sh  run.sh  submission.py
.github/workflows/: tests.yml
docs/: documentation.tex
gemini-cli-solver/: agent_runner.py  orchestrator.py
src/: AGENTS.md  Dockerfile  Dockerfile.antigravity  Dockerfile.gemini  Dockerfile.opencode  agent_runner.py  e2b_template.py  log_protocol.py  logger.py  models.py  orchestrator.py
src/backends/: __init__.py  base.py  docker_runner.py  e2b_runner.py
src/cli_impl/: __init__.py  antigravity.py  base.py  claude_code.py  gemini.py  junie.py  opencode.py  types.py
src/dockerfiles/: Dockerfile.claude  Dockerfile.junie  Dockerfile.opencode
src/sandboxes/: __init__.py  base.py  docker_runner.py  e2b_runner.py
src/utils/: logging.py
tests/: conftest.py
tests/functional/: test_agent_runner_errors.py  test_full_pipeline.py  test_orchestrator.py
tests/integration/: test_cli_failures.py  test_cli_integration.py  test_docker_failures.py  test_docker_integration.py  test_docker_real.py  test_full_pipeline.py  test_gemini_real.py  test_opencode_real.py
tests/unit/: test_agent_runner.py  test_agent_runner_errors.py  test_cli_impl.py  test_docker_runner.py  test_orchestrator.py  test_submission_security.py
