[project]
name = "opencode-solver"
version = "0.1.0"
description = "OpenCode CLI agent solver for ARC-AGI tasks"
requires-python = ">=3.11"
dependencies = ["docker>=7.1.0", "python-dotenv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as pure unit tests",
]
addopts = "-ra -v"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma
    "CPY001",  # missing-copyright-notice
    "D",       # All docstring errors
    "FIX002",  # line-contains-todo
    "ISC001",  # Conflicts with formatter ruff
    "PLR0904", # Too many public methods (... > 20)
    "TD002",   # Missing author in TODO `# TODO(<author_name>): ...`
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
    "G004",    # Logging statement uses f-string
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S603",    # `subprocess` call: check for execution of untrusted input
    "DTZ005",  # call-datetime-now-without-tzinfo
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "SLF001",  # private-member-access
    "ANN201",  # Missing type annotation for argument in function or method
]

[dependency-groups]
dev = [
    "e2b>=2.14.0",
    "numpy>=2.4.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.4",
]
