[project]
name = "opencode-solver"
version = "0.1.0"
description = "OpenCode CLI agent solver for ARC-AGI tasks"
requires-python = ">=3.11"
dependencies = [
    "aiodocker>=0.24.0",
    "docker>=7.1.0",
    "pydantic>=2.0",
    "python-dotenv",
    "typer>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: marks tests as pure unit tests (single function/class in isolation)",
    "functional: marks tests as functional tests (component workflows with mocked deps)",
    "integration: marks tests as integration tests (real external dependencies)",
]
addopts = "-ra -v"

[tool.ruff]
line-length = 120
target-version = "py311"

[dependency-groups]
dev = [
    "e2b>=2.14.0",
    "numpy>=2.4.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.4",
]
